div element for points and lives

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         This browser does not support canvas!
     </canvas>
 
+    
+    <div id="pointsDisplay">Points: 0</div>
+    <div id="lifeDisplay">Reamining lives: 5</div>
+
     <script src="script.js">   </script>
     <script>
         'use strict'
