game restart done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     
     <div id="pointsDisplay">Points: 0</div>
     <div id="lifeDisplay">Reamining lives: 5</div>
+    <div id="scoreDisplay">Your score:0.0</div>
+    <div id="gameOver" hidden = "true"> Game Over! Press the button to restart!</div>
+    <button id="restartGame" hidden="true">Restart Game</button>
 
     <script src="script.js">   </script>
     <script>
