web strage api for storing the best results

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <div id="pointsDisplay">Points: 0</div>
     <div id="lifeDisplay">Reamining lives: 5</div>
     <div id="scoreDisplay">Your score:0.0</div>
-    <div id="gameOver" hidden = "true"> Game Over! Press the button to restart!</div>
+    <div id="gameOver" hidden = "true"> Game Over! Press the Restart Game to restart!</div>
+    <div id="bestScore" hidden="true"> Your score is one of the bests, let us save it!</div>
+    <button id="saveBtn" hidden="true"> Save Score </button>
+    <div id="hintSaved" hidden="true">Your score is saved!</div>
     <button id="restartGame" hidden="true">Restart Game</button>
+    <div id="name" hidden="true">Name:</div>
+    <input id="nameDiv" type="text" hidden="true"></input>
 
     <script src="script.js">   </script>
     <script>
