--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asteroids Game</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
    
@@ -20,7 +21,7 @@
     <div id="bestScore" hidden="true"> Your score is one of the bests, let us save it!</div>
     <button id="saveBtn" hidden="true"> Save Score </button>
     <div id="hintSaved" hidden="true">Your score is saved!</div>
-    <button id="restartGame" hidden="true">Restart Game</button>
+    <button type="button" class="btn btn-primary" id="restartGame" hidden="true">Restart Game</button>
     <div id="name" hidden="true">Name:</div>
     <input id="nameDiv" type="text" hidden="true"></input>
 
